--- a/style.css
+++ b/style.css
@@ -20,4 +20,64 @@ header {
     padding: 20px;
 }
 
-body 
+body {
+     background-color: rgb(252, 252, 173);
+     color:black;
+     margin: center;
+}
+ .título-2{
+    color: black;
+    justify-content: center;
+ }
+
+ .paragrafo-1{
+      margin-left: 20px;
+      justify-content: center;
+ }
+
+ .título-3{
+    color: black;
+    justify-content: center;
+ }
+
+ .paragrafo-2{
+     margin-left: 20px;
+     justify-content: center;
+ }
+
+ .arduino{
+    width: 40%;
+    margin-right: 30px;
+ }
+
+ .multimetro{
+    width: 40%;
+    margin-right: 30px;
+ }
+
+ .capacitor{
+    width: 40%;
+    padding: 45px;
+    margin-left: 30px;
+    margin-right: 50px;
+ }
+
+ .sensor-LDR{
+    width: 40%;
+    margin-right: 50px;
+ }
+
+.LED{
+    width: 40%;
+    margin-right: 50px;
+}
+
+.footer{
+    background-color: #000000;
+    color: white;
+}
+
+p{
+    justify-content: center;
+    padding: 20px;
+}
