--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ header {
 body {
      background-color: rgb(252, 252, 173);
      color:black;
-     margin: center;
+     font-family: 'Poppins', 'sans-serif';
 }
  .título-2{
     color: black;
