--- a/style.css
+++ b/style.css
@@ -57,6 +57,11 @@ body {
     margin-right: 30px;
  }
 
+ .protoboard {
+    width: 40%;
+    margin-right: 30px;
+ }
+
  .multimetro{
     width: 40%;
     margin-right: 30px;
